added assembly PDF generation

--- a/hw/Makefile
+++ b/hw/Makefile
@@ -9,6 +9,8 @@ SILKSCREEN_COLOUR?=C4C4C4
 PADS_COLOUR?=FFDE4E
 TOP_SOLDERMASK_COLOUR?=8D2323CC
 BOTTOM_SOLDERMASK_COLOUR?=23238D
+ASSEMBLY_COLOUR?=FF0000
+
 
 # Constants
 SHELL := /bin/bash
@@ -29,7 +31,7 @@ debug:
 
 gerbers: mkdir 2layers
 
-doc: gerbers pdf png
+doc: schematic png assembly
 
 
 
@@ -80,16 +82,34 @@ mkdir:
 %.place : %.brd
 	$(EAGLE) -X -N -d GERBER_RS274X -o $(GERBERS_PATH)/$@ $< tPlace tDocu
 
+# Component names
+%.names : %.brd
+	$(EAGLE) -X -N -d GERBER_RS274X -o $(GERBERS_PATH)/$@ $< tNames
 
 ### DOCUMENTATION GENERATION
-pdf:
-	$(EAGLE) -X -N -d PS -x.4 -y.2 -o $(PROJECT_NAME)-schematic.ps $(SCHEMATIC) Nets Busses Symbols Names Values
+schematic:
+	$(EAGLE) -X -N -d PS -s 0.7 -x.0 -y.2 -o $(PROJECT_NAME)-schematic.ps $(SCHEMATIC) Nets Busses Symbols Names Values
 	ps2pdf $(PROJECT_NAME)-schematic.ps $(PROJECT_NAME)-schematic.pdf
-#	@rm $(PROJECT_NAME)-schematic.ps
+	@rm $(PROJECT_NAME)-schematic.ps
+
+assembly-top:  $(PROJECT_NAME).GTL $(PROJECT_NAME).GTS $(PROJECT_NAME).GTO $(PROJECT_NAME).GTP $(PROJECT_NAME).GBL $(PROJECT_NAME).GBS $(PROJECT_NAME).GBO $(PROJECT_NAME).GBP  $(PROJECT_NAME).TXT $(PROJECT_NAME).GML $(PROJECT_NAME).place $(PROJECT_NAME).names
+	`gerbv --export=pdf --output=$(PROJECT_NAME)-assembly-top.pdf --dpi=$(GERBER_IMAGE_RESOLUTION) --background=#000000 \
+	--foreground=#$(ASSEMBLY_COLOUR) $(GERBERS_PATH)/$(PROJECT_NAME).names \
+	--foreground=#$(SILKSCREEN_COLOUR) $(GERBERS_PATH)/$(PROJECT_NAME).place \
+	--foreground=#$(SILKSCREEN_COLOUR) $(GERBERS_PATH)/$(PROJECT_NAME).GTO `
+
+
+#	$(EAGLE) -X -N -d PS -r -s4 -x.3 -y2.8 -o $(PROJECT_NAME)-components-top.ps $(BOARD) tPlace tDocu Dimension Holes Milling Measures Document
+#	$(EAGLE) -X -N -d PS -r -s4 -x.3 -y2.8 -o $(PROJECT_NAME)-names-top.ps $(BOARD) tNames
+#	ps2pdf $(PROJECT_NAME)-components-top.ps $(PROJECT_NAME)-components-top.pdf
+#	ps2pdf $(PROJECT_NAME)-names-top.ps $(PROJECT_NAME)-names-top.pdf
+#	pdftk  $(PROJECT_NAME)-names-top.pdf background  $(PROJECT_NAME)-components-top.pdf output  $(PROJECT_NAME)-assembly-top.pdf
+#	@rm $(PROJECT_NAME)-assembly.ps
+
 	
 png:  $(PROJECT_NAME).GTL $(PROJECT_NAME).GTS $(PROJECT_NAME).GTO $(PROJECT_NAME).GTP $(PROJECT_NAME).GBL $(PROJECT_NAME).GBS $(PROJECT_NAME).GBO $(PROJECT_NAME).GBP  $(PROJECT_NAME).TXT $(PROJECT_NAME).GML $(PROJECT_NAME).place
-	`gerbv --export=png --output=$(PROJECT_NAME)-layout.png --dpi=$(GERBER_IMAGE_RESOLUTION) \
-	--background=#000000 --foreground=#$(HOLES_COLOUR) $(GERBERS_PATH)/$(PROJECT_NAME).TXT \
+	`gerbv --export=png --output=$(PROJECT_NAME)-layout.png --dpi=$(GERBER_IMAGE_RESOLUTION) --background=#000000 \
+	--foreground=#$(HOLES_COLOUR) $(GERBERS_PATH)/$(PROJECT_NAME).TXT \
 	--foreground=#$(SILKSCREEN_COLOUR) $(GERBERS_PATH)/$(PROJECT_NAME).GTO \
 	--foreground=#$(SILKSCREEN_COLOUR) $(GERBERS_PATH)/$(PROJECT_NAME).place \
 	--foreground=#$(PADS_COLOUR) $(GERBERS_PATH)/$(PROJECT_NAME).GTS \
@@ -104,3 +124,4 @@ clean:
 	rm -rf $(PROJECT_NAME)-gerbers.zip
 	rm -rf $(PROJECT_NAME)-schematic.pdf
 	rm -rf $(PROJECT_NAME)-layout.png
+	rm -rf $(PROJECT_NAME)-assembly.pdf
