Renamed gyro DRDY signal and updated makefile

--- a/hw/Makefile
+++ b/hw/Makefile
@@ -2,7 +2,7 @@
 EAGLE := /opt/eagle-7.2.0/bin/eagle
 
 # Gerbv PCB image preview parameters - colours, plus resolution
-GERBER_IMAGE_RESOLUTION?=300
+GERBER_IMAGE_RESOLUTION?=2400
 BACKGROUND_COLOUR?=000000
 HOLES_COLOUR?=000000
 SILKSCREEN_COLOUR?=C4C4C4
@@ -99,8 +99,7 @@ assembly-top:  $(PROJECT_NAME).GTL $(PROJECT_NAME).GTS $(PROJECT_NAME).GTO $(PRO
 	--foreground=#$(SILKSCREEN_COLOUR) $(GERBERS_PATH)/$(PROJECT_NAME).GTO `
 	
 png:  $(PROJECT_NAME).GTL $(PROJECT_NAME).GTS $(PROJECT_NAME).GTO $(PROJECT_NAME).GTP $(PROJECT_NAME).GBL $(PROJECT_NAME).GBS $(PROJECT_NAME).GBO $(PROJECT_NAME).GBP  $(PROJECT_NAME).TXT $(PROJECT_NAME).GML $(PROJECT_NAME).place
-	`gerbv --export=png --output=$(PROJECT_NAME)-layout.png --dpi=$(GERBER_IMAGE_RESOLUTION) --background=#000000 \
-	--foreground=#$(HOLES_COLOUR) $(GERBERS_PATH)/$(PROJECT_NAME).TXT \
+	`gerbv --export=png --output=$(PROJECT_NAME)-layout.png --dpi=$(GERBER_IMAGE_RESOLUTION) --background=#$(BACKGROUND_COLOUR) \
 	--foreground=#$(SILKSCREEN_COLOUR) $(GERBERS_PATH)/$(PROJECT_NAME).GTO \
 	--foreground=#$(SILKSCREEN_COLOUR) $(GERBERS_PATH)/$(PROJECT_NAME).place \
 	--foreground=#$(PADS_COLOUR) $(GERBERS_PATH)/$(PROJECT_NAME).GTS \
